@@ -1,5 +1,5 @@
 WinEditLine (formerly MinGWEditLine)
-Copyright 2010-2020 Paolo Tosco <paolo.tosco.mail@gmail.com>
+Copyright 2010-2021 Paolo Tosco <paolo.tosco.mail@gmail.com>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
