@@ -1,6 +1,13 @@
 WinEditLine's (formerly MinGWEditLine) ChangeLog
 ------------------------------------------------
 
+*** December 5, 2021: release of WinEditLine 2.207 ***
+
+  Changes with respect to the previous version include:
+  - Added rl_library_version, rl_end, rl_readline_version
+    from php branch (Thanks to Anatol Belski for the
+    contribution)
+
 *** January 6, 2020: release of WinEditLine 2.206 ***
 
   Changes with respect to the previous version include:
